--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4546,6 +4546,7 @@ div[id ^= "mini-panel-partner_in_"], {
 		.pane-content{
 			background-color: @color-primary;
 			padding-top: 25px;
+			padding-bottom: 25px;
 			margin-top: 0px;
 			.view-id-partner_content{
 				
