--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1970,6 +1970,59 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	}
 }
 
+//list
+.page-node-my-content{
+	.view-filters{
+		form{
+			#edit-type-wrapper{
+				width: 100%;
+			}
+			#edit-title-field-value-wrapper{
+				width: 100%;
+			}
+			#edit-state-wrapper{
+				width: 100%;
+			}
+			.views-exposed-widget{
+				padding: 0px;
+			}
+			#edit-field-publication-date-value-wrapper{
+				> label{
+					color: @color-primary;
+					margin-bottom: 0px;
+					margin-top: 15px;
+					&:after{
+						content: ":";
+					}
+				}
+				.views-widget{
+					#edit-field-publication-date-value-min-wrapper,
+					#edit-field-publication-date-value-max-wrapper{
+						display: inline-block;
+						margin-bottom: 15px;
+						.form-item-field-publication-date-value-min,
+						.form-item-field-publication-date-value-max{
+							>label{
+
+							}
+							> div{
+								float: inherit;
+							}
+						}
+					}
+					
+				}
+			}
+			.views-submit-button{
+				width: 100%;
+				button{
+					margin-top: 0px;
+				}
+			}
+		}
+	}
+}
+
 /*End private zone*/
 
 /*general search styles
