css changes pz - editing some ids "--2" issue

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4179,7 +4179,7 @@ div[id ^= "mini-panel-partner_in_"], {
 .node-form{
 	> div{
 		background-color: @color-primary;
-		padding-top: 25px;
+		padding-top: 0px;
 		padding-bottom: 25px;
 		margin-bottom: 20px;
 	}
@@ -4224,11 +4224,11 @@ div[id ^= "mini-panel-partner_in_"], {
 		font-weight: bold;
 	}
 	//url
-	#edit-field-website-und-0-url{
+	#edit-field-website-und-0-url--2{
 		max-width: 40%;
 	}
 	//tags
-	#edit_field_tags_und_chosen{
+	#edit_field_tags_und__2_chosen{
 		width: 100% !important;
 		.chosen-choices{
 			background-image: inherit;
@@ -4241,9 +4241,9 @@ div[id ^= "mini-panel-partner_in_"], {
 		}
 	}
 	//imagen
-	#edit-field-image, 
-	#edit-field-private-image, 
-	#edit-field-private-file{
+	#edit-field-image--2, 
+	#edit-field-private-image--2, 
+	#edit-field-private-file--2{
 		.image-widget-data,
 		.file-widget{
 			display: block;
@@ -4282,7 +4282,7 @@ div[id ^= "mini-panel-partner_in_"], {
 		}
 	}
 	//dates & revised date
-	#edit-field-publication-date, #edit-field-revised-date{
+	#edit-field-publication-date--2, #edit-field-revised-date--2{
 		.date-combo{
 			border: none;
 			background-color: inherit;
@@ -4303,7 +4303,7 @@ div[id ^= "mini-panel-partner_in_"], {
 	}
 
 	//upload documents
-	#edit-field-resource-fc{
+	#edit-field-resource-fc--2{
 		.panel{
 			border: none;
 			border-radius: 0px;
@@ -4337,7 +4337,7 @@ div[id ^= "mini-panel-partner_in_"], {
 					color: white;
 					margin-top: 5px;
 				}
-				#edit-field-resource-fc-und-0-field-language{
+				#edit-field-resource-fc-und-0-field-language--2{
 					width: 40%;
 				}
 				.form-managed-file{
@@ -4382,13 +4382,13 @@ div[id ^= "mini-panel-partner_in_"], {
 	
 
 	//selects with other widths
-	#edit_field_co_author_und_chosen,
-	#edit_field_sector_und_chosen{
+	#edit_field_co_author_und_chosen--2,
+	#edit_field_sector_und_chosen--2{
 		min-width: 300px;
 	}
 
 	//buttons
-	button#edit-save-preview, button#edit-submit{
+	button#edit-save-preview--2, button#edit-submit--2{
 		background-color: @color-see-more;
 		margin-top: 40px;
 		min-width: 200px;
@@ -4396,7 +4396,7 @@ div[id ^= "mini-panel-partner_in_"], {
 			content: "> ";
 		}
 	}
-	button#edit-send-for-approval{
+	button#edit-send-for-approval--2{
 		display: block;
 	    width: 100%;
 	    height: 70px;
