css changes pz - fixing ids issu 2nd commit

--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1847,7 +1847,7 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	select,
 	textarea,
 	label,
-	#edit-field-website-und-0-url{
+	#edit-field-website-und-0-url--2{
 		width: 100% !important;
 		max-width: 100%;
 	}
@@ -1867,21 +1867,21 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	.form-type-date-select .form-type-select[class*=hour] {
 	    margin-left: 0em;
 	}
-	#edit_field_co_author_und_chosen, 
-	#edit_field_sector_und_chosen {
+	#edit_field_co_author_und__2_chosen, 
+	#edit_field_sector_und__2_chosen {
     	width: 100% !important;
     	min-width: 100px;
 	}
 
 
 	//buttons
-	button#edit-save-preview,
-	button#edit-submit{
+	button#edit-save-preview--2,
+	button#edit-submit--2{
 		margin-top: 15px;
 		width: 100%;
 		overflow: hidden;
 	}
-	button#edit-send-for-approval{
+	button#edit-send-for-approval--2{
 		font-size: 1em;
 		margin-top: 15px;
 		width: 100%;
@@ -1890,8 +1890,8 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	}
 
 	//file
-	#edit-field-image,
-	#edit-field-private-image{
+	#edit-field-image--2,
+	#edit-field-private-image--2{
 		.image-widget-data{
 			input[type="file"]{
 				width: 67% !important;
@@ -1919,36 +1919,21 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 }
 
 //collaboration page
-.page-collaboration-area.page-strategic-documentation-search{
+.page-node-collaboration-area.page-strategic-documentation-search{
 	.panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last{
 		background-color: inherit;
 	}
 	.page-promotional-materials-search{
-		.panel-page-introduction-text{
-			h2{
-				color: @color-text-purple-darker;
-				border-bottom: 2px solid @color-primary-dark;
-				padding-bottom: 15px;
-				margin-bottom: 25px;
-			}
-		}
 		.menu-name-menu-collaboration{
-			padding-bottom: 25px;
 			ul{
 				li{
 					display: block;
 					width: 100%;
-					text-align: center;
 					background-color: @color-text-purple-darker;
+					margin-bottom: 10px;
 					.introduction-image{
 						display: none;
 						a{
-							width: 150px;
-						    margin: 0 auto;
-						    height: 150px;
-						    margin-bottom: 10px;
-						    border-radius: 50%;
-						    display: block;
 						    img{
 						    	display: none;
 						    }
