--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -628,7 +628,7 @@ div[id ^= "mini-panel-partner_in_"]{
 .page-oira-tools,
 .page-promotional-resources-search,
 .page-search-site,
-.page-collaboration-area {
+.page-node-collaboration-area {
 	.panels-flexible-row-new-1,
 	.panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last,
 	.oira-search-form-container {
@@ -1268,9 +1268,9 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 }
 
 .node-form{
-	#edit-field-image, 
-	#edit-field-private-image, 
-	#edit-field-private-file{
+	#edit-field-image--2, 
+	#edit-field-private-image--2, 
+	#edit-field-private-file--2{
 		.image-widget-data,
 		.file-widget{
 			display: block;
@@ -1314,6 +1314,20 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 .page-node-add-promotional-material{
 	.date-no-float{
 		max-width: 250px;
+	}
+}
+
+//collaboration page
+.page-node-collaboration-area{
+	.page-promotional-materials-search{
+		.menu-name-menu-collaboration{
+			ul{
+				li{
+					width: 50%;
+					margin-bottom: 30px;
+				}
+			}
+		}
 	}
 }
 
