--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4382,8 +4382,8 @@ div[id ^= "mini-panel-partner_in_"], {
 	
 
 	//selects with other widths
-	#edit_field_co_author_und_chosen--2,
-	#edit_field_sector_und_chosen--2{
+	#edit_field_co_author_und__2_chosen,
+	#edit_field_sector_und__2_chosen{
 		min-width: 300px;
 	}
 
@@ -4567,6 +4567,8 @@ div[id ^= "mini-panel-partner_in_"], {
 				width: 25%;
 				button{
 					margin-top: 3.95em;
+					border-radius: 0px;
+					border: none;
 				}
 			}
 		}
@@ -4626,8 +4628,9 @@ div[id ^= "mini-panel-partner_in_"], {
 			ul{
 				li{
 					display: inline-block;
-					width: 33%;
+					width: 25%;
 					text-align: center;
+					vertical-align: top;
 					.introduction-image{
 						a{
 							width: 150px;
@@ -4636,8 +4639,9 @@ div[id ^= "mini-panel-partner_in_"], {
 						    margin-bottom: 10px;
 						    border-radius: 50%;
 						    display: block;
+						    background-color: @color-primary-dark;
 						    img{
-						    	display: none;
+						    	margin-top: 30px;
 						    }
 						}
 					}
@@ -4647,27 +4651,6 @@ div[id ^= "mini-panel-partner_in_"], {
 						font-style: italic;
 						max-width: 120px;
 						margin: 0 auto;
-					}
-				}
-				.menu-mlid-2796{
-					.introduction-image{
-						a{
-							background: url('../images/icons/collaboration-osha.png') @color-primary-dark no-repeat center !important;
-						}
-					}
-				}
-				.menu-mlid-2797{
-					.introduction-image{
-						a{
-							background: url('../images/icons/collaboration-partners.png') @color-primary-dark no-repeat center !important;
-						}
-					}
-				}
-				.menu-mlid-2798{
-					.introduction-image{
-						a{
-							background: url('../images/icons/collaboration-upload.png') @color-primary-dark no-repeat center !important;
-						}
 					}
 				}
 			}
